This resolves NDEX-716 (Edge Attributes column data looks clipped):
1) Added a new class, hideLongLine, to ndex-angular-site.css.  This class is used to format cells of the Properties columns in
the Edges and Nodes table of a network.  The class
- hides (doesn’t wrap) line if it is too long (overflown)
- shows ellipsis if the line gets truncated

2) modified populateEdgeTable() and populateNodeTable() to apply

<div class='ui-grid-cell-contents hideLongLine’

to the cellTemplate of columnDefs for Properties.  The ui-grid-cell-contents class
makes sure that the cell contents is vertically aligned (applies the same formatting as that of Subject, Predicate, Object in Edges table and Label in Nodes table).

--- a/css/ndex-angular-site.css
+++ b/css/ndex-angular-site.css
@@ -888,3 +888,9 @@ ul.ndex-nav-pills > li > a:hover {
     padding-top: 2em;
     font-size: 1.5em;
 }
+
+.hideLongLine {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
